# Letterbot

./: README.md  pyproject.toml
letterboxd-discord-bot/: README.md
letterboxd-discord-bot V2/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
letterboxd-discord-bot V2/data/: letterboxd_bot.sqlite3
letterboxd-discord-bot V2/letterboxd_bot/: __init__.py  __main__.py  bot.py  comparison.py  config.py  database.py  exports.py  metadata.py  models.py  rss.py
letterboxd-discord-bot V2/tests/: test_bot_import.py  test_comparison.py  test_database.py  test_exports.py  test_rss.py  test_summary.py  test_visualization.py
letterboxd-discord-bot/letterboxd_bot/: __init__.py  config.py  database.py  gemini.py  visualization.py
letterboxd-discord-bot/tests/fixtures/: sample_rss.xml
letterboxd_bot/: bot.py  models.py  rss.py  summary.py
tests/: test_database.py  test_metadata.py  test_rss.py
