[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "letterboxd-discord-bot"
version = "1.4.1"
description = "Discord alerts for notable ratings from tracked Letterboxd RSS feeds"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10,<4",
    "aiosqlite>=0.20,<1",
    "discord.py>=2.5,<3",
    "google-genai>=1.0,<2",
    "matplotlib>=3.9,<4",
    "python-dotenv>=1.0,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
